# playbook

./: .gitignore
.cursor/rules/: create-edit.mdc  create-feature-frd.mdc  create-feature-prd.mdc  create-prd.mdc  generate-task.mdc  process-task-list.mdc  project.mdc
backend/: main.py  pyproject.toml
backend/llama_index_server/: index_server.py
backend/routes/: qa_router.py
backend/utils/: config.py  data_utils.py
notebooks/: Opening Range Breakout PlayBook 24dc67f7bca4802684bbe2c7a13f7ded copy.xml  Opening Range Breakout PlayBook 24dc67f7bca4802684bbe2c7a13f7ded.md  Respostas.md  pyproject.toml  starting.ipynb
notebooks/.cursor/rules/: project_spec.mdc
notebooks/data/: balanced_trading_data.json  cleaned_comp_2.json  cleaned_components.json  components_rows.json  createNewComponents.js  genTrainingData.js  opening_breakout.md
notebooks/notebooks/: train_with_balanced_data.ipynb
notebooks/src/: inference_code_!.py
playbook/: .gitignore  CLAUDE.md  app.config.ts  components.json  copy.txt  drizzle.config.ts  package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.config.mjs  testdrive.html  tsconfig.json  ui.config.json
playbook/convex/: documents.ts  schema.ts
playbook/data/: components_rows.csv  setups_rows.csv
playbook/drizzle/: 0000_bizarre_risque.sql  0001_low_forgotten_one.sql  0001_next_piledriver.sql  0002_glossy_ken_ellis.sql  0002_same_paper_doll.sql  0003_fuzzy_union_jack.sql  0003_panoramic_firedrake.sql  0004_parallel_maggott.sql  0004_unique_whizzer.sql  0005_furry_lizard.sql  0005_romantic_stark_industries.sql  (+12 more)
(+168 files in other folders)
